--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,11 @@
 language: python
 python:
-  - "3.4"
   - "3.5"
-  - "3.5-dev"  # 3.5 development branch
   - "3.6"
-  - "3.6-dev"  # 3.6 development branch
-  - "3.7-dev"  # 3.7 development branch
 # command to install dependencies
 install:
   - pip install jupyter
   - pip install pandas
   - pip install numpy
-  - wget https://github.com/hakimel/reveal.js/archive/master.zip
-  - unzip master.zip
-  - mv reveal.js-master reveal.js
 script:
-  - jupyter nbconvert water_resource_challenge.ipynb --to slides --reveal-prefix=reveal.js
-after_success: |
-    if [ -n "$GITHUB_API_KEY" ]; then
-    git checkout --orphan gh-pages
-    git rm -rf --cached .
-    mv water_resource_challenge.slides.html index.html
-    git add -f --ignore-errors index.html img reveal.js
-    git -c user.name='travis' -c user.email='travis' commit -m init
-    git push -f -q https://$GITHUB_USER:$GITHUB_API_KEY@github.com/$TRAVIS_REPO_SLUG gh-pages
-    fi
+  jupyter nbconvert --to html water_resource_challenge.ipynb
