--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,10 @@ install:
   - pip install numpy
 script:
   - jupyter nbconvert --to html water_resource_challenge.ipynb
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
+  keep-history: true
+  on:
+    branch: master
